prepare for homework

--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lesson-6-Github</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Homework 6</title>
   </head>
   <body>
-    <h1>hello world</h1>
-    <ul>
-      <li>list item</li>
-      <li>list item</li>
-      <li>list item</li>
-      <li>list item</li>
-      <li>list item</li>
-    </ul>
+    <section>
+      <div class="article"><h3>afa</h3></div>
+    </section>
   </body>
 </html>
