add img, ul,li, styles

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 6</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=PT+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
     <section>
-      <div class="article"><h3>afa</h3></div>
+      <ul class="list">
+        <li class="article">
+          <img src="./img/Bitmap.svg" alt="Tourism" width="370" height="280"/>
+          <h3>Tourism</h2>
+          <h4>One of Saturn’s largest rings may be newer than anyone</h3>
+          <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
