deleted direction IMG

--- a/index.html
+++ b/index.html
@@ -14,68 +14,68 @@
     <section>
       <ul class="list row">
         <li class="article float">
-          <img src="./img/Tourism.svg" alt="Tourism" width="370" height="280"/>
+          <img src="Tourism.svg" alt="Tourism" width="370" height="280"/>
           <h3>Tourism</h2>
           <h4>One of Saturn’s largest rings may be newer than anyone</h3>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Sport.svg" alt="Sport" width="370" height="280">
+          <img src="Sport.svg" alt="Sport" width="370" height="280">
           <h3>Sport</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Fashion.svg" alt="Fashion" width="370" height="280">
+          <img src="Fashion.svg" alt="Fashion" width="370" height="280">
           <h3>Fashion</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Clothes.svg" alt="Clothes" width="370" height="280">
+          <img src="Clothes.svg" alt="Clothes" width="370" height="280">
           <h3>Clothes</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Clothes-2.svg" alt="Clothes2" width="370" height="280">
+          <img src="Clothes-2.svg" alt="Clothes2" width="370" height="280">
           <h3>Clothes</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Fashion-2.svg" alt="Fashion2" width="370" height="280">
+          <img src="Fashion-2.svg" alt="Fashion2" width="370" height="280">
           <h3>Fashion</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article-big float">
-          <img src="./img/Summer.svg" alt="Summer" width="770" height="349">
+          <img src="Summer.svg" alt="Summer" width="770" height="349">
           <h3 class="margin">Summer</h3>
           <h4 class="margin">One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch 6 comments</p>
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem</p>
         </li>
         <li class="article float">
-          <img src="./img/Autumn.svg" alt="Autumn" width="370" height="280">
+          <img src="Autumn.svg" alt="Autumn" width="370" height="280">
           <h3>Autumn</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Clothes-3.svg" alt="Clothes-3" width="370" height="280">
+          <img src="Clothes-3.svg" alt="Clothes-3" width="370" height="280">
           <h3>Clothes</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Summer-2.svg" alt="Summer-2">
+          <img src="Summer-2.svg" alt="Summer-2">
           <h3>Summer</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
         </li>
         <li class="article float">
-          <img src="./img/Summer-3.svg" alt="Summer-3">
+          <img src="Summer-3.svg" alt="Summer-3">
           <h3>Summer</h3>
           <h4>One of Saturn’s largest rings may be newer than anyone</h4>
           <p>June 6, 2019 <span class="fourth-color-text">By</span> Rickie Baroch</p>
